menu (2.1.16) unstable; urgency=low

  * The "unreleased" release
  * Jens Arvidsson:
    - Update Swedish translation.
  * Update Polish menu message translation, thanks Marcin Owsiany. 
  * Add Italian menu message translation, by Stefano Canepa.

 -- Bill Allombert <ballombe@debian.org>  Fri,  2 Jul 2004 19:42:06 +0200

menu (2.1.15) unstable; urgency=low

  * The "spring clean up" release 
  * Jens Arvidsson:
    - Update Swedish translation.
  * Update Italian menu-section translation. Thanks Stefano Canepa.
  * Fix German menu-section translation. Closes: #254416. 
    Thanks Eduard Bloch and Sebastian Rittau.
  * Update French translation of update-menus manpage. Closes: #256992.
    Thanks Sylvain Cherrier.
  * Fix po/Makefile.am so that tr.mo is installed. Sorry for not noticing
    sooner.
  * Morten Brix Pedersen:
    - Update Danish translation.
    - Fix wrong error message when install-menu couldn't open a menu-method.
    - outputencoding now defaults to LOCALE when no value is specified.
    - No longer require startmenu and endmenu to be defined.
    - Call getuid() once and cache the result.
    - Document behaviour when multiple fields are specified in the same menu
      entry. Closes: #250224.
    - Add example of an executable menufile to examples/. Closes: #252606
      Thanks Marc Haber.
  * Sort menu entry according to the current locale. Note that this works
    only if the menu-method uses the locale encoding. Closes: #200447.
  * Fix error message for update-menus --menumethod.  Closes: #251857.
  * Parse update-menus options with getopt_long.
  * Improve update-menus --help message.
  * Avoid [a-z] regexp since that breaks under Estonian locales.
    Closes: #254894. Thanks to Jaan Pullerits for the explanation.

 -- Bill Allombert <ballombe@debian.org>  Fri,  2 Jul 2004 18:35:16 +0200

menu (2.1.14) unstable; urgency=low

  * The "multiligual" release
  * Update German menu-section translation. Thanks Sebastian Rittau.